--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -16,15 +16,15 @@ jobs:
           python-version: "3.x"
       - name: Build distribution 📦
         run: |
-          pip install wheel
+          pip install build
           make dist
       - name: Validate
         run: |
           pip install dist/*.whl
           python -c "import ads;"
-## To run publish to test PyPI secret with token needs to be added,
+## To run publish to test PyPI a secret with token needs to be added,
 ##    this one GH_ADS_TESTPYPI_TOKEN - removed after initial test.
-## Project name also needed to be updated in setup.py - setup(name="test_oracle_ads", ...),
+## Project name also needed to be updated in pyproject.toml - name = "test_oracle_ads" in [project] section
 ##    regular name is occupied by former developer and can't be used for testing
 #      - name: Publish distribution 📦 to Test PyPI
 #        env:
