ODSC-45687. ADS release 2.8.9
- check tests with xgboost==1.5.1 and latest anyio

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -114,7 +114,7 @@ onnx = [
   "protobuf<=3.20",
   "skl2onnx>=1.10.4",
   "tf2onnx",
-  "xgboost<=1.7",
+  "xgboost==1.5.1",
 ]
 opctl = [
   "conda-pack",
