ODSC-45687. ADS release 2.8.9
- try run tests not in parallel with xgboost <=1.7

--- a/.github/workflows/run-unittests.yml
+++ b/.github/workflows/run-unittests.yml
@@ -114,7 +114,7 @@ jobs:
 
           # Run tests
           python -m pytest -v -p no:warnings --durations=5 \
-          -n auto --dist loadfile ${{ matrix.cov-reports }} \
+          ${{ matrix.cov-reports }} \
           ${{ matrix.test-path }} ${{ matrix.ignore-path }}
 
       - name: "Save coverage files"
