--- a/pyproject.toml
+++ b/pyproject.toml
@@ -106,7 +106,7 @@ notebook = [
   "ipywidgets~=7.6.3",
 ]
 onnx = [
-  "lightgbm==3.3.1",
+  "lightgbm",
   "onnx>=1.12.0",
   "onnxmltools>=1.10.0",
   "onnxruntime>=1.10.0",
@@ -114,7 +114,7 @@ onnx = [
   "protobuf<=3.20",
   "skl2onnx>=1.10.4",
   "tf2onnx",
-  "xgboost<=1.7",
+  "xgboost",
 ]
 opctl = [
   "conda-pack",
