--- a/ads/opctl/operator/lowcode/responsible_ai/example/responsible_ai_offline_jsonl.yaml
+++ b/ads/opctl/operator/lowcode/responsible_ai/example/responsible_ai_offline_jsonl.yaml
@@ -5,7 +5,7 @@ spec:
     url: ./
   report_file_name: report.html
   test_data:
-    url: ads/opctl/operator/lowcode/responsible_ai/example/data/test.csv
+    url: ads/opctl/operator/lowcode/responsible_ai/example/data/test.jsonl
   guardrails:
     - name: toxicity
       evaluation:
