--- a/.github/workflows/run-unittests.yml
+++ b/.github/workflows/run-unittests.yml
@@ -38,12 +38,13 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.8", "3.9", "3.10"]
-        test-path: ["tests/unitary", "tests/unitary/with_extras/model"]
+        # test-path: ["tests/unitary", "tests/unitary/with_extras/model"]
+        test-path: ["tests/unitary/with_extras/hpo", "tests/unitary/with_extras/model/test_model_info_extractor.py"]
         include:
-          - test-path: "tests/unitary"
+          - test-path: "tests/unitary/with_extras/hpo"
             ignore-path: "--ignore tests/unitary/with_extras/model --ignore tests/unitary/with_extras/feature_store"
             name: "unitary"
-          - test-path: "tests/unitary/with_extras/model"
+          - test-path: "tests/unitary/with_extras/model/test_model_info_extractor.py"
             name: "model"
           - python-version: "3.8"
             cov-reports: --cov=ads --cov-report=xml --cov-report=html
@@ -100,6 +101,8 @@ jobs:
         shell: bash
         env:
           CONDA_PREFIX: /usr/share/miniconda
+          # https://scikit-learn.org/stable/faq.html#why-do-i-sometime-get-a-crash-freeze-with-n-jobs-1-under-osx-or-linux
+          # JOBLIB_START_METHOD: forkserver
         run: |
           set -x # print commands that are executed
 
