ODSC-45687. ADS release 2.8.9
- change order of tests running - "with_extras", then "default_setup"
- reverted changes in unit tests

--- a/.github/workflows/run-unittests.yml
+++ b/.github/workflows/run-unittests.yml
@@ -37,15 +37,14 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.8"]
-        # test-path: ["tests/unitary", "tests/unitary/with_extras/model"]
-        test-path: ["tests/unitary"]
+        python-version: ["3.8", "3.9", "3.10"]
+        test-path: ["tests/unitary/with_extras tests/unitary/default_setup", "tests/unitary/with_extras/model"]
         include:
-          - test-path: "tests/unitary"
+          - test-path: "tests/unitary/with_extras tests/unitary/default_setup"
             ignore-path: "--ignore tests/unitary/with_extras/model --ignore tests/unitary/with_extras/feature_store"
             name: "unitary"
-          # - test-path: "tests/unitary/with_extras/model"
-          #   name: "model"
+          - test-path: "tests/unitary/with_extras/model"
+            name: "model"
           - python-version: "3.8"
             cov-reports: --cov=ads --cov-report=xml --cov-report=html
 
