--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ build-backend = "flit_core.buildapi"
 
 # Required
 name = "oracle_ads"  # the install (PyPI) name; name for local build in [tool.flit.module] section below
-version = "2.8.8"
+version = "2.8.9"
 
 # Optional
 description = "Oracle Accelerated Data Science SDK"
@@ -114,7 +114,7 @@ onnx = [
   "protobuf<=3.20",
   "skl2onnx>=1.10.4",
   "tf2onnx",
-  "xgboost==1.5.1",
+  "xgboost<=1.7",
 ]
 opctl = [
   "conda-pack",
