--- a/ads/opctl/operator/lowcode/forecast/environment.yaml
+++ b/ads/opctl/operator/lowcode/forecast/environment.yaml
@@ -13,6 +13,7 @@ dependencies:
       - cerberus
       - json2table
       - sktime
+      - autots['additional']
       - optuna==2.9.0
       - oracle-automlx==23.2.3
       - "--editable=git+https://github.com/oracle/accelerated-data-science.git@feature/forecasting#egg=oracle-ads"
