--- a/pyproject.toml
+++ b/pyproject.toml
@@ -153,7 +153,7 @@ viz = [
   "seaborn>=0.11.0",
 ]
 forecast = [
-  "autots",
+  "autots[additional]",
   "datapane",
   "json2table",
   "neuralprophet",
