Fixed issue caused by https://github.com/microsoft/onnxruntime/issues/17631.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -109,7 +109,7 @@ onnx = [
   "lightgbm==3.3.1",
   "onnx>=1.12.0",
   "onnxmltools>=1.10.0",
-  "onnxruntime>=1.10.0",
+  "onnxruntime>=1.10.0,<1.16",  # v1.16 introduced issues https://github.com/microsoft/onnxruntime/issues/17631, releved by unit tests
   "oracle_ads[viz]",
   "protobuf<=3.20",
   "skl2onnx>=1.10.4",
