Fixes the problem with the operator's base image.

--- a/ads/opctl/docker/operator/environment.yaml
+++ b/ads/opctl/docker/operator/environment.yaml
@@ -5,4 +5,4 @@ dependencies:
   - python=3.8
   - pip
   - pip:
-      - oracle-ads[opctl]
+      - "git+https://github.com/oracle/accelerated-data-science.git@feature/forecasting#egg=oracle-ads"
