Moves operator information form the init file to the MLoperator yaml.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -27,3 +27,4 @@ include ads/model/common/*.*
 include ads/operator/**/*.md
 include ads/operator/**/*.yaml
 include ads/operator/**/*.whl
+include ads/operator/**/MLoperator
