code cleanup, add dependency to env yaml

--- a/ads/opctl/operator/lowcode/forecast/environment.yaml
+++ b/ads/opctl/operator/lowcode/forecast/environment.yaml
@@ -12,6 +12,7 @@ dependencies:
       - datapane
       - cerberus
       - sktime
+      - shap
       - autots[additional]
       - optuna==2.9.0
       - oracle-automlx==23.2.3
