ODSC-48419. Re-arrange unit tests
- split workflow into py3.8+cov report and py3.9, py3.10
- moved 1 step into composite action to resolve duplicated code

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -38,6 +38,7 @@ repos:
     rev: v8.17.0
     hooks:
     -   id: gitleaks
+        exclude: .github/workflows/reusable-actions/set-dummy-conf.yml
 # Oracle copyright checker
 -   repo: https://github.com/oracle-samples/oci-data-science-ai-samples/
     rev: cbe0136f7aaffe463b31ddf3f34b0e16b4b124ff
