ODSC-48419. Re-arrange unit tests
- rename action file

--- a/.github/workflows/run-unittests-py39-py310.yml
+++ b/.github/workflows/run-unittests-py39-py310.yml
@@ -56,7 +56,7 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - uses: ./.github/workflows/set-dummy-conf@tag_test_actions
+      - uses: .github/workflows/set-dummy-conf@tag_test_actions
 
       - name: "Test env setup"
         timeout-minutes: 20
