--- a/.github/workflows/run-unittests.yml
+++ b/.github/workflows/run-unittests.yml
@@ -55,7 +55,7 @@ jobs:
         with:
           python-version: "3.8"
 
-      - uses: ./.github/workflows/set-dummy-conf@tag_test_actions
+      - uses: .github/workflows/set-dummy-conf@tag_test_actions
 
       - name: "Test env setup"
         timeout-minutes: 20
