--- a/.github/workflows/run-unittests.yml
+++ b/.github/workflows/run-unittests.yml
@@ -41,12 +41,12 @@ jobs:
             name: "model"
 
     steps:
-      - name: "Create more disk space"
-        run: |
-          sudo rm -rf /usr/share/dotnet
-          sudo rm -rf /opt/ghc
-          sudo rm -rf "/usr/local/share/boost"
-          sudo rm -rf "$AGENT_TOOLSDIRECTORY"
+#      - name: "Create more disk space"
+#        run: |
+#          sudo rm -rf /usr/share/dotnet
+#          sudo rm -rf /opt/ghc
+#          sudo rm -rf "/usr/local/share/boost"
+#          sudo rm -rf "$AGENT_TOOLSDIRECTORY"
 
       - uses: actions/checkout@v3
 
@@ -57,6 +57,10 @@ jobs:
           cache-dependency-path: |
             pyproject.toml
             "**requirements.txt"
+
+      - name: df
+        shell: bash
+        run: df -h
 
       - uses: ./.github/workflows/set-dummy-conf
         name: "Test config setup"
