--- a/.github/workflows/run-unittests-py39-py310.yml
+++ b/.github/workflows/run-unittests-py39-py310.yml
@@ -2,12 +2,12 @@ name: "[Py3.9][Py3.10] - tests/unitary/**"
 
 on:
   workflow_dispatch:
-#  pull_request:
-#    paths:
-#      - "ads/**"
-#      - pyproject.toml
-#      - "**requirements.txt"
-#      - ".github/workflows/run-unittests*.yml"
+  pull_request:
+    paths:
+      - "ads/**"
+      - pyproject.toml
+      - "**requirements.txt"
+      - ".github/workflows/run-unittests*.yml"
 
 # Cancel in progress workflows on pull_requests.
 # https://docs.github.com/en/actions/using-jobs/using-concurrency#example-using-a-fallback-value
@@ -42,6 +42,9 @@ jobs:
             name: "model"
 
     steps:
+      - uses: ./.github/workflows/reusable/create-more-space
+        name: "Create more disk space"
+
       - uses: actions/checkout@v3
 
       # Caching python libraries installed with pip
