--- a/tests/unitary/with_extras/opctl/test_files/job_notebook.yaml
+++ b/tests/unitary/with_extras/opctl/test_files/job_notebook.yaml
@@ -22,19 +22,14 @@ spec:
   runtime:
     kind: runtime
     spec:
+      args: []
       conda:
-        type: published
-        uri: '{Path to the custom conda environment. Example: oci://your_bucket@namespace/object_name'
-      entrypoint: '{Entrypoint notebook. For MLflow, it will be replaced with the
-        CMD}'
-      env:
-      - name: env_name
-        value: env_value
+        slug: ''
+        type: service
+      entrypoint: '{Entrypoint notebook. For MLflow, it will be replaced with the CMD}'
       excludeTags:
       - tag1
-      freeformTags:
-        tag_name: tag_value
+      freeformTags: {}
       notebookEncoding: utf-8
-      source: '{Path to the source code directory. For MLflow, it will be replaced
-        with the path to the project}'
+      source: '{Path to the source code directory. For MLflow, it will be replaced with the path to the project}'
     type: notebook
