--- a/tests/unitary/with_extras/opctl/test_files/job_script.yaml
+++ b/tests/unitary/with_extras/opctl/test_files/job_script.yaml
@@ -22,15 +22,11 @@ spec:
   runtime:
     kind: runtime
     spec:
+      args: []
       conda:
-        type: published
-        uri: '{Path to the custom conda environment. Example: oci://your_bucket@namespace/object_name'
+        slug: conda_slug
+        type: service
       entrypoint: '{For MLflow and Operator will be auto generated}'
-      env:
-      - name: env_name
-        value: env_value
-      freeformTags:
-        tag_name: tag_value
-      scriptPathURI: '{Path to the script. For MLflow, it will be replaced with the
-        path to the project}'
+      freeformTags: {}
+      scriptPathURI: '{Path to the script. For MLflow and Operator will be auto generated}'
     type: script
