--- a/tests/unitary/with_extras/opctl/test_files/pipeline_container.yaml
+++ b/tests/unitary/with_extras/opctl/test_files/pipeline_container.yaml
@@ -27,19 +27,13 @@ spec:
       runtime:
         kind: runtime
         spec:
-          args:
-          - --key1
-          - val1
-          cmd: '{Container CMD. For MLFlow, it will be replaced with the Project CMD}'
+          args: []
+          cmd: '{Container CMD. For MLflow and Operator will be auto generated}'
           entrypoint:
           - bash
           - --login
           - -c
-          env:
-          - name: env_name
-            value: env_value
-          freeformTags:
-            tag_name: tag_value
+          freeformTags: {}
           image: iad.ocir.io/namespace/image:tag
         type: container
 type: pipeline
