--- a/ads/opctl/operator/lowcode/pii/environment.yaml
+++ b/ads/opctl/operator/lowcode/pii/environment.yaml
@@ -1,4 +1,4 @@
-name: PII
+name: pii
 channels:
   - conda-forge
 dependencies:
@@ -7,4 +7,7 @@ dependencies:
   - pip:
       - datapane
       - scrubadub
+      - gender_guesser
+      - nameparser
+      - scrubadub_spacy
       - "git+https://github.com/oracle/accelerated-data-science.git@feature/ads_pii_operator#egg=oracle-ads"
