--- a/pyproject.toml
+++ b/pyproject.toml
@@ -147,7 +147,7 @@ torch = [
   "torchvision",
 ]
 viz = [
-  "bokeh>=2.3.0, <=2.4.3",
+  "bokeh>=3.0.3",
   "folium>=0.12.1",
   "graphviz<0.17",
   "scipy>=1.5.4",
