--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ build-backend = "flit_core.buildapi"
 
 # Required
 name = "oracle_ads"  # the install (PyPI) name; name for local build in [tool.flit.module] section below
-version = "2.8.11"
+version = "2.9.0rc2"
 
 # Optional
 description = "Oracle Accelerated Data Science SDK"
@@ -162,10 +162,15 @@ forecast = [
   "statsmodels",
   "sktime",
   "optuna==2.9.0",
-  "oci",
   "oci-cli",
   "shap",
   "holidays==0.21.13",
+  "conda-pack",
+  "docker",
+  "inflection",
+  "nbconvert",
+  "nbformat",
+  "rich",
 ]
 
 [project.urls]
