added optional dependency for pii operator

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -163,6 +163,9 @@ forecast = [
   "statsmodels",
   "sktime",
 ]
+pii = [
+  "datapane",
+]
 
 [project.urls]
 "Github" = "https://github.com/oracle/accelerated-data-science"
