--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,6 +54,7 @@ classifiers = [
 # In dependencies se "<library>; platform_machine == 'aarch64'" to specify ARM underlying platform
 # Copied from install_requires list in setup.py, setup.py got removed in favor of this config file
 dependencies = [
+  "PyYAML>=6",  # pyyaml 5.4 is broken with cython 3
   "asteval>=0.9.25",
   "cerberus>=1.3.4",
   "cloudpickle>=1.6.0",
@@ -67,7 +68,6 @@ dependencies = [
   "pandas>1.2.1,<2.1",
   "psutil>=5.7.2",
   "python_jsonschema_objects>=0.3.13",
-  "PyYAML>=6",  # pyyaml 5.4 is broken with cython 3
   "requests",
   "scikit-learn>=1.0",
   "tabulate>=0.8.9",
@@ -173,7 +173,14 @@ forecast = [
   "rich",
 ]
 pii = [
+  "aiohttp",
   "datapane",
+  "gender_guesser",
+  "nameparser",
+  "oracle_ads[opctl]",
+  "plotly",
+  "scrubadub",
+  "scrubadub_spacy",
 ]
 
 [project.urls]
