Changes the version of ADS fro the forecasting.

--- a/ads/opctl/operator/lowcode/forecast/environment.yaml
+++ b/ads/opctl/operator/lowcode/forecast/environment.yaml
@@ -5,6 +5,7 @@ dependencies:
   - python=3.8
   - pip
   - pip:
+      - oracle-ads>=2.9.0
       - prophet
       - neuralprophet
       - pmdarima
@@ -16,4 +17,3 @@ dependencies:
       - autots[additional]
       - optuna==2.9.0
       - oracle-automlx==23.2.3
-      - "git+https://github.com/oracle/accelerated-data-science.git@feature/forecasting#egg=oracle-ads"
